--- a/Pages/index.html
+++ b/Pages/index.html
@@ -6,6 +6,6 @@
     <title>Git Practice</title>
 </head>
 <body>
-    <h1>I am going to be the most richest person in Africa ad the smartest programmer.</h1>
+    <h1>I am going to be the most richest person in Africa and the smartest programmer.</h1>
 </body>
 </html>
